--- a/frontend/src/pages/Home/styles.css
+++ b/frontend/src/pages/Home/styles.css
@@ -49,7 +49,7 @@
   animation: visible 3s;
 }
 
-.button {
+.container-home .button {
   display: flex;
   justify-content: space-evenly;
   align-items: center;
